--- a/src/assets/color.css
+++ b/src/assets/color.css
@@ -18,6 +18,9 @@
   --color-highlight-dark: #c00d9e;
   --color-highlight-tint: rgba(221, 15, 183, 0.1);
   --color-highlight-fg: #ffffff;
+
+  --color-tooltip: rgba(0, 0, 0, 0.7);
+  --color-tooltip-fg: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -36,5 +39,7 @@
     --color-accent: #5494fb;
     --color-accent-dark: #4078c0;
     --color-accent-fg: #000000;
+
+    --color-highlight: #fc35d8;
   }
 }
