--- a/src/assets/color.css
+++ b/src/assets/color.css
@@ -2,6 +2,7 @@
   --color-chrome: #FAFAFA;
   --color-chrome-fg: #000000;
   --color-chrome-fg-secondary: #5f5f5f;
+  --color-chrome-fg-tertiary: #909090;
 
   --color-surface: #ffffff;
   --color-surface-fg: #000000;
@@ -28,6 +29,7 @@
     --color-chrome: #242424;
     --color-chrome-fg: #ffffff;
     --color-chrome-fg-secondary: #606060;
+    --color-chrome-fg-tertiary: #909090;
 
     --color-surface: #2c2c2c;
     --color-surface-fg: #ffffff;
